Validation for service request type permissions on create request.
API version 7.1
- Change response body JSON schema of GET `/utility/services`
  - Add `request_type_whitelist_enabled`
- Change response body JSON schema of GET `/utility/services/:service_id`
  - Add `request_type_whitelist_enabled`
- New API: GET `/utility/services/:service_id/request_type_whitelist`: Get a list of request types that are currently in service's request type whitelist and the current whitelist enforcement status (`enabled` flag).
- New API: GET `/utility/request_type_whitelisted_services`: Get a list of services that explicitly include the specified request type in their request type whitelist, along with the current enforcement status (`enabled` flag) of that whitelist.
- NDID only APIs
  - Change request body JSON schema of POST `/ndid/create_service`.
    - Add `domain`
  - New API: POST `/ndid/add_request_type_to_service_request_type_whitelist`: Add request type to specified service request type whitelist.
  - New API: POST `/ndid/remove_request_type_from_service_request_type_whitelist`: Remove request type from specified service request type whitelist.
  - New API: POST `/ndid/enable_service_request_type_whitelist`: Set service request type whitelist active. (Use whitelist.)
  - New API: POST `/ndid/disable_service_request_type_whitelist`: Set service request type whitelist inactive. (Don't use / ignore whitelist.)

Update OpenAPI specs

Update CHANGELOG.md
